add more field to api
