# openapi/premier-league-api.yaml
@@ -192,6 +192,10 @@ components:
       properties:
         teamId:
           type: integer
+        teamName:
+          type: string
+        teamLogo:
+          type: string
         overallShotOnGoal:
           type: number
     TeamBallPossessionBySeason:
@@ -199,6 +203,10 @@ components:
       properties:
         teamId:
           type: integer
+        teamName:
+          type: string
+        teamLogo:
+          type: string
         overallBallPossession:
           type: number
     TeamFoulsBySeason:
@@ -206,6 +214,10 @@ components:
       properties:
         teamId:
           type: integer
+        teamName:
+          type: string
+        teamLogo:
+          type: string
         overallFouls:
           type: number
     TeamPassedPercentageBySeason:
@@ -213,5 +225,9 @@ components:
       properties:
         teamId:
           type: integer
+        teamName:
+          type: string
+        teamLogo:
+          type: string
         overallBallPossession:
           type: number
